--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,115 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+/* ----- Google Fonts ----- */
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Overpass:wght@400;700&display=swap');
+
+/* ----- Global styling ----- */
+
+:root {
+  font-family: 'Oswald', sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --color-accent: #aa8c21;
+  --color-light: #fff;
+  --color-dark-grey: #323232;
+  --color-dark: #000000;
+  --color-header-footer-background: #1c1b1f;
+  --color-placeholder-text: #646464;
+  /* --color-hover: #000000; */
+  --font-size-xs: 0.625rem;
+  --font-size-s: clamp(0.875rem, 2.5vw, 1rem);
+  --font-size-m: 2rem;
+  --font-size-l: 2.8125rem;
+  --font-size-m: clamp(1rem, 1rem + 1.7273vw, 2rem);
+  --font-size-l: clamp(1.275rem, 1rem + 2.7273vw, 2.8125rem);
+  --font-size-xl: clamp(2.375rem, 1.3705rem + 4.7273vw, 5.625rem);
+  --font-size-xxl: clamp(2.25rem, -0.3767rem + 10.7241vw, 9.275rem);
 }
 
-html,
-body {
+html {
+  scroll-behavior: smooth;
+}
+
+* {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  box-sizing: border-box;
 }
+
+body {
+  background-color: var(--color-dark);
+  color: var(--color-light);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: var(--grid-main);
+
+  @media (max-width: 1100px) {
+    grid-template-columns: var(--grid-medium);
+  }
+  @media (max-width: 650px) {
+    grid-template-columns: var(--grid-small);
+  }
+}
+
+.grid {
+  grid-column: main;
+}
+
+h1 {
+  font-size: var(--font-size-xxl);
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: var(--font-size-xl);
+}
+
+h3 {
+  font-size: var(--font-size-l);
+}
+
+h4 {
+  font-size: var(--font-size-m);
+}
+
+h5 {
+  font-size: var(--font-size-s);
+}
+
+h6 {
+  font-size: var(--font-size-xs);
+}
+
+p,
+span {
+  font-family: 'Overpass', sans-serif;
+  font-size: var(--font-size-s);
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-light);
+}
+a:hover {
+  font-weight: 600;
+}
+
+/* ----- Just added in case we need it ----- */
+
+/* button {
+  border-radius: 0;
+  border: none;
+  padding: 0.8rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.25s;
+}
+button:hover {
+  background-color: var(--color-light);
+  color: var(--color-dark-grey);
+} */
