--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 /* ----- Google Fonts ----- */
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Overpass:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Overpass:wght@200;400;700&display=swap');
 
 /* ----- Global styling ----- */
 
 :root {
   font-family: 'Oswald', sans-serif;
   line-height: 1.5;
-  font-weight: 400;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,14 +18,15 @@
   --color-header-footer-background: #1c1b1f;
   --color-placeholder-text: #646464;
   /* --color-hover: #000000; */
-  --font-size-xs: 0.625rem;
+  --font-size-xs: 0.625rem; /* Fixed size */
   --font-size-s: clamp(0.875rem, 2.5vw, 1rem);
-  --font-size-m: 2rem;
-  --font-size-l: 2.8125rem;
-  --font-size-m: clamp(1rem, 1rem + 1.7273vw, 2rem);
-  --font-size-l: clamp(1.275rem, 1rem + 2.7273vw, 2.8125rem);
-  --font-size-xl: clamp(2.375rem, 1.3705rem + 4.7273vw, 5.625rem);
-  --font-size-xxl: clamp(2.25rem, -0.3767rem + 10.7241vw, 9.275rem);
+  --font-size-m: clamp(1.25rem, 1rem + 1vw, 1.75rem);
+  --font-size-l: clamp(1.75rem, 1.5rem + 1vw, 2.25rem);
+  --font-size-xl: clamp(2.5rem, 2rem + 2vw, 3.5rem);
+  --font-size-xxl: clamp(3rem, 2.5rem + 2vw, 4rem);
+  --font-weight-bold: 600;
+  --font-weight-regular: 400;
+  --font-weight-light: 200;
 }
 
 html {
@@ -92,11 +92,12 @@ span {
 }
 
 a {
+  font-family: 'Overpass', sans-serif;
   text-decoration: none;
   color: var(--color-light);
 }
 a:hover {
-  font-weight: 600;
+  text-decoration: underline;
 }
 
 /* ----- Just added in case we need it ----- */
