--- a/src/index.css
+++ b/src/index.css
@@ -104,17 +104,29 @@ a:hover {
   text-decoration: underline;
 }
 
+input {
+  font-family: 'Overpass', sans-serif;
+  font-size: var(--font-size-s);
+  border:none;
+  color: var(--color-placeholder-text);
+  padding: 0 0.7rem;
+}
+
 /* ----- Just added in case we need it ----- */
 
-/* button {
+ button {
   border-radius: 0;
-  border: none;
+  border: 0.2rem solid var(--color-light);
   padding: 0.8rem;
   font-size: 1rem;
   cursor: pointer;
   transition: 0.25s;
+  background-color: var(--color-accent);
+  color: var(--color-light);
+  font-family: 'Overpass', sans-serif;
+  font-size: var(--font-size-s);
 }
 button:hover {
   background-color: var(--color-light);
   color: var(--color-dark-grey);
-} */
+}
