--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,8 @@ input {
   font-size: var(--font-size-s);
   border:none;
   color: var(--color-placeholder-text);
-  padding: 0 0.7rem;
+  padding-left: 0.6rem;
+ 
 }
 
 /* ----- Just added in case we need it ----- */
@@ -117,7 +118,7 @@ input {
  button {
   border-radius: 0;
   border: 0.2rem solid var(--color-light);
-  padding: 0.8rem;
+  padding: 0.4rem;
   font-size: 1rem;
   cursor: pointer;
   transition: 0.25s;
@@ -127,6 +128,6 @@ input {
   font-size: var(--font-size-s);
 }
 button:hover {
-  background-color: var(--color-light);
-  color: var(--color-dark-grey);
+  background-color: var(--color-dark-grey);
+
 }
