--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,12 @@
   --color-dark: #000000;
   --color-header-footer-background: #1c1b1f;
   --color-placeholder-text: #646464;
-  /* --color-hover: #000000; */
-  --font-size-xs: 0.625rem; /* Fixed size */
+  --color-hover: #aa8c21;
+  --font-size-xs: 0.625rem;
   --font-size-s: clamp(0.875rem, 2.5vw, 1rem);
   --font-size-m: clamp(1.25rem, 1rem + 1vw, 1.75rem);
   --font-size-l: clamp(1.75rem, 1.5rem + 1vw, 2.25rem);
-  --font-size-xl: clamp(2.5rem, 2rem + 2vw, 3.5rem);
+  --font-size-xl: clamp(2rem, 1.75rem + 2vw, 3rem);
   --font-size-xxl: clamp(3rem, 2.5rem + 2vw, 4rem);
   --font-weight-bold: 600;
   --font-weight-regular: 400;
@@ -106,18 +106,15 @@ a:hover {
 input {
   font-family: 'Overpass', sans-serif;
   font-size: var(--font-size-s);
-  border:none;
+  border: none;
   color: var(--color-placeholder-text);
   padding-left: 0.6rem;
   @media screen and (max-width: 768px) {
-
     height: 2.42rem;
-    
   }
- 
 }
 
- button {
+button {
   border-radius: 0;
   border: 0.2rem solid var(--color-light);
   padding: 0.4rem;
