--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --color-hover: #aa8c21;
   --font-size-xs: 0.875rem;
   --font-size-s: clamp(0.938rem, 2.5vw, 1.063rem);
-  --font-size-m: clamp(1.25rem, 1rem + 1vw, 1.75rem);
+  --font-size-m: clamp(1.125rem, 1rem + 1vw, 1.5rem);
   --font-size-l: clamp(1.75rem, 1.5rem + 1vw, 2.25rem);
   --font-size-xl: clamp(2.5rem, 2rem + 2vw, 3.5rem);
   --font-size-xxl: clamp(3rem, 2.5rem + 2vw, 4rem);
@@ -89,29 +89,17 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
 input {
+  border: none;
   font-family: 'Overpass', sans-serif;
   font-size: var(--font-size-s);
-  border: none;
   color: var(--color-placeholder-text);
-  padding-left: 0.6rem;
-  @media screen and (max-width: 768px) {
-    height: 2.42rem;
-  }
 }
 
 button {
-  border-radius: 0;
-  border: 0.2rem solid var(--color-light);
-  padding: 0.4rem;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.25s;
-  background-color: var(--color-accent);
-  color: var(--color-light);
   font-family: 'Overpass', sans-serif;
   font-size: var(--font-size-s);
-}
-button:hover {
-  background-color: var(--color-dark-grey);
+  text-transform: uppercase;
+  cursor: pointer;
 }
